<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/txtEmptyDriverList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@color/gray_light"
        android:gravity="center"
        android:text="@string/no_drivers_found"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/glResults"
        app:layout_constraintEnd_toStartOf="@+id/glLists"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEmptyShipmentList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@color/gray_light"
        android:gravity="center"
        android:text="@string/no_shipment_found"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/glResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glLists"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEmptyResultList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_results_found"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDrivers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@+id/glResults"
        app:layout_constraintEnd_toStartOf="@+id/glLists"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_list_selector" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShipments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@+id/glResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glLists"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_list_selector" />

    <TextView
        android:id="@+id/txtPreviewDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_driver_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glResults" />

    <TextView
        android:id="@+id/txtPreviewShipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_shipment_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPreviewDriver" />

    <TextView
        android:id="@+id/txtPreviewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suitability_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPreviewShipment" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPreviewScore" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirm"
        tools:listitem="@layout/item_list_result"/>
</androidx.constraintlayout.widget.ConstraintLayout>